--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,9 +33,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_northwind:
     # Applies to all files under models/example/
-    example:
+    staging:
       +materialized: view
-
+      +schema: staging
+    marts:
+      +materialized: table
+      +schema: marts
 
 
 seeds:
