Adição das dimensões de Clientes e Transportadoras na Fatos Vendas.

--- a/models/marts/dim_clientes.yml
+++ b/models/marts/dim_clientes.yml
@@ -5,7 +5,7 @@ models:
     description: Essa é a dimensão com informações dos clientes da northwind.
     columns:
       - name: id_cliente
-        description: Chave primária da dimensão de clientes.
+        description: Essa é a chave primaria da dimensão clientes.
         tests:
           - unique
           - not_null
